--- a/index.html
+++ b/index.html
@@ -20,3 +20,6 @@
     </footer>
 </body>
 </html>
+<a href="Dr_Paromita_Mukherjee_CV.pdf" target="_blank" class="cv-button">
+    Download My CV
+</a>
