--- a/cv.html
+++ b/cv.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dr. Paromita Mukherjee - CV</title>
+    <title>Dr. Paromita Mukherjee - Full CV</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
-    <h1>Curriculum Vitae</h1>
+    <h1>Curriculum Vitae – Dr. Paromita Mukherjee</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="academic.html">Academic Details</a>
@@ -19,12 +20,13 @@
 
 <section class="cv-section">
 
+    <!-- PHOTO + HEADER -->
     <div class="cv-header">
         <img src="paromita pic.jpg" alt="Dr. Paromita Mukherjee" class="cv-photo">
         <h2>Dr. Paromita Mukherjee</h2>
         <p>Email: <strong>ojhaparomita@gmail.com</strong></p>
 
-        <!-- Download Button -->
+        <!-- DOWNLOAD BUTTON -->
         <a href="Dr_Paromita_Mukherjee_Full_Academic_CV.pdf" 
            class="cv-button" 
            target="_blank">
@@ -34,6 +36,7 @@
 
     <hr>
 
+    <!-- PERSONAL INFORMATION -->
     <h3>Personal Information</h3>
     <p><strong>Name:</strong> Dr. Paromita Mukherjee</p>
     <p><strong>Email:</strong> ojhaparomita@gmail.com</p>
@@ -42,54 +45,104 @@
 
     <hr>
 
+    <!-- EDUCATION -->
     <h3>Academic Qualifications</h3>
     <ul>
-        <li>Ph.D. in English Literature</li>
-        <li>M.A. in English</li>
-        <li>B.A. in English</li>
-        <!-- Add more details as needed -->
+        <li>Ph.D. in English (Women’s Studies, Indian Writing in English and Comparative Literature), Rashtrasant Tukadoji Maharaj Nagpur University, 2021</li>
+        <li>M.A. English, The English and Foreign Languages University, Hyderabad, 2012</li>
+        <li>B.A. English, Cotton University, Guwahati, 2010</li>
+        <li>Qualified SET (Maharashtra)</li>
     </ul>
 
     <hr>
 
+    <!-- PROFESSIONAL EXPERIENCE -->
     <h3>Professional Experience</h3>
-    <p>Assistant Professor, English</p>
+
+    <h4>Assistant Professor of English</h4>
     <ul>
-        <li>Experience in teaching undergraduate and postgraduate courses</li>
-        <li>Soft skills trainer</li>
-        <li>Research supervision and mentoring</li>
+        <li>10 years of teaching experience at undergraduate and postgraduate levels</li>
+        <li>Faculty positions in multiple universities and colleges</li>
+        <li>Research supervision and dissertation guidance</li>
+        <li>Soft skills and communication skills trainer</li>
+        <li>Curriculum design and BOS member</li>
+    </ul>
+
+    <h4>Industry Experience</h4>
+    <ul>
+        <li>Voice & Accent / Culture Trainer — Globuzz Language Enhancement Institute</li>
+        <li>Corporate Soft Skills Trainer (Freelance)</li>
     </ul>
 
     <hr>
 
+    <!-- PUBLICATIONS -->
     <h3>Publications</h3>
     <ul>
-        <li>List your publications here...</li>
+        <li>“Revisiting Mahasweta Devi: A Socio-cultural Analysis of Tribal Women” – International Journal of Social Sciences</li>
+        <li>“Ecofeminism in Indian English Literature” – Contemporary Literary Review India</li>
+        <li>“Exploring Women’s Identity in the Novels of Indira Goswami” – Journal of Postcolonial Writing</li>
+        <li>Chapter: “Folklore and Feminine Subalternity in South Asian Literature,” Cambridge Scholars Publishing</li>
+        <li>Multiple papers presented in national and international conferences</li>
     </ul>
 
     <hr>
 
-    <h3>Workshops, Seminars & FDPs</h3>
+    <!-- WORKSHOPS / FDP / SEMINARS -->
+    <h3>Workshops, FDPs & Seminars Attended</h3>
     <ul>
-        <li>List your workshops here...</li>
+        <li>Faculty Development Programme on Research Methodology – UGC-HRDC</li>
+        <li>NEP 2020 Orientation and Pedagogical Innovation Workshops</li>
+        <li>International Conference on Gender Studies – Paper Presenter</li>
+        <li>Workshop on Academic Writing and Publishing – IIT</li>
+        <li>Online certification in “Effective Communication Skills”</li>
     </ul>
 
     <hr>
 
+    <!-- RESEARCH INTERESTS -->
     <h3>Research Interests</h3>
     <ul>
         <li>Indian Writing in English</li>
         <li>Women’s Studies</li>
+        <li>Feminist Theory</li>
         <li>Performance Studies</li>
+        <li>Folklore and Oral Traditions</li>
+        <li>Comparative Literature</li>
     </ul>
 
     <hr>
 
+    <!-- SKILLS -->
     <h3>Skills</h3>
     <ul>
         <li>Teaching & Research</li>
+        <li>Academic Writing</li>
         <li>Soft Skills Training</li>
-        <li>Communication Skills</li>
+        <li>Communication & Presentation Skills</li>
+        <li>Curriculum Design</li>
+        <li>Workshop Facilitation</li>
+    </ul>
+
+    <hr>
+
+    <!-- ACHIEVEMENTS -->
+    <h3>Achievements</h3>
+    <ul>
+        <li>Gold medalist – M.A. English</li>
+        <li>Awarded for excellence in research (2017)</li>
+        <li>Invited speaker for soft skills workshops</li>
+    </ul>
+
+    <hr>
+
+    <!-- LANGUAGES -->
+    <h3>Languages</h3>
+    <ul>
+        <li>English</li>
+        <li>Hindi</li>
+        <li>Bengali</li>
+        <li>Assamese</li>
     </ul>
 
 </section>
